# agentic-devops-assistant

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: app.py  main.py
src/agents/: config_validator.py  config_validator_v2.py  docu_rag.py  log_explorer.py  supervisore.py
src/models/: conversation.py  gitlab.py  k8s.py  user.py  validation_session.py
src/static/css/: input.css  output.css
src/templates/: _chunk_preview.html  _ingest_result.html  _message.html  _schema_list.html  _schema_result.html  index.html
src/tools/: async_db.py  embeddings.py  ingest_docs.py  ingest_multi.py  ollama_output.py  schema_store_local.py  seed_iceberg.py  seed_logs.py  yaml_annotator.py  yaml_repair.py
tests/: conftest.py
tests/agents/: test_config_validator.py  test_docu_rag.py  test_log_explorer.py  test_supervisore.py
tests/e2e/: conftest.py  test_delegation_chain.py  test_http_endpoints.py  test_sse_streaming.py
tests/e2e/k8s/: run_test.sh
tests/e2e/k8s/assets/: broken-deployment.yaml  k8s-deployment-schema.json
tests/e2e/k8s/results/: corrected-deployment.yaml  validation-result.txt
tests/e2e/yaml/: 01-ui-layout.yaml  02-chat-interaction.yaml  03-keyboard-behavior.yaml  04-agent-badges.yaml  05-visual-screenshots.yaml  06-simulated-conversation.yaml
tests/integration/: test_agents_with_real_duckdb.py
tests/models/: test_gitlab.py  test_k8s.py
