[project]
name = "agentic-devops-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1.42.75",
    "crawl4ai>=0.8.6",
    "duckdb>=1.5.1",
    "fastapi>=0.135.2",
    "flashrank>=0.2.10",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-repair[schema]>=0.58.7",
    "jsonschema>=4.23.0",
    "logfire[fastapi,pydantic-ai]>=4.30.0",
    "markitdown[docx,image,pdf,pptx,xlsx]>=0.1.5",
    "openapi-spec-validator>=0.7.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-ai[openai]>=1.71.0",
    "pydantic-graph>=1.71.0",
    "pyiceberg[pyarrow,sql-sqlite]>=0.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "tabulate>=0.10.0",
    "uvicorn[standard]>=0.42.0",
    "yamlfix>=1.19.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live Docker services (MinIO) or Ollama"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
strict = true
python_version = "3.13"
plugins = ["pydantic.mypy"]
